--- a/htmlPro/Test.html
+++ b/htmlPro/Test.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="zh-CN">
 
 <head>
+    <meta charset="utf-8">
     <title>
         WEB NOTE
     </title>
-    <link rel="shortcut icon" href="image/pageicon.ico" type="image/x-icon">
-    <!-- <link rel="shortcut icon" href="pageicon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 </head>
 
-<body background="image/103.jpg" style="
+<body background="image/101.jpg" style="
 background-attachment: fixed;
 background-size:cover;
 background-color: black">
@@ -37,6 +37,11 @@ background-color: black">
             background-color: rgba(255, 255, 255, 0.637)
         }
 
+        div {
+            text-align: center;
+            margin: auto;
+        }
+
         .center {
             text-align: center;
             margin: auto;
@@ -55,9 +60,19 @@ background-color: black">
         .line {
             color: rgb(255, 255, 255)
         }
+
+        .headicon {
+            width: 60px;
+            height: 60px;
+            background-size: contain;
+            background-image: url("image/headicon.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            font: inherit;
+            vertical-align: baseline;
+            margin: auto;
+        }
     </style>
-
-
 
     <a name="top"></a>
     <div id="toppart">
@@ -75,16 +90,15 @@ background-color: black">
         我们相信，使用一款简单的文本编辑器是学习 HTML 的好方法。
     </p>
     <p>
-
-    </p>
-    <hr class="line" />
-    <p>
         <a href="https://www.bilibili.com/" class="link" target="_blank">B站链接</a>
         <a href="#top" class="linknotline">返回顶部</a>
     </p><br />
-    <div style="text-align:center">
-        <img src="image/headicon.jpg" width="60" height="60" alt="如果无法显示图像，将显示 " alt" 属性中的文本：">
+    <div>
+        <a href="http://huaban.com/c4jckhsqyfb/" target="_blank">
+            <h3 class="headicon"></h3>
+        </a>
     </div>
+
 </body>
 
 </html>
