--- a/htmlPro/Test.html
+++ b/htmlPro/Test.html
@@ -34,7 +34,7 @@
             我们相信，使用一款简单的文本编辑器是学习 HTML 的好方法。
         </p>
     </div>
-    
+
     <div id="table">
         <h2>table表格</h2>
         <p>
@@ -57,13 +57,19 @@
 
     <div id="list">
         <h2>列表</h2>
-        <p>
-            <ul style="text-align: center">
-                <li style="background-color: greenyellow">列表元素1</li>
-                <li style="background-color: greenyellow">列表元素2</li>
-                <li style="background-color: greenyellow">列表元素3</li>
-            </ul>
-        </p>
+        <h3>vertical</h3>
+        <ul>
+            <li inline>列表元素1</li>
+            <li inline>列表元素2</li>
+            <li inline>列表元素3</li>
+        </ul>
+        <h3>horizontal list</h3>
+        <ul>
+            <li block>element 1</li>
+            <li block>element 2</li>
+            <li block>element 3</li>
+        </ul>
+        <p>123</p>
     </div>
 
     <div id="script">
@@ -308,11 +314,17 @@
             <p>
     </div>
 
+    <div id="test">
+        <h2>Test</h2>
+        <img src="image/headicon.jpg" alt="own headicon" />
+    </div>
+
     <div id="bottom">
         <p>
             <a href="https://www.bilibili.com/" class="link">B站链接</a>
             <a href="http://www.w3school.com.cn/html/index.asp" class="link">W3school</a>
             <a href="#top" class="linknotline">返回顶部</a>
+            <a href="javascript:window.scrollTo( 0, 0 );">返回顶部js</a>
         </p><br />
         <div>
             <a href="http://huaban.com/c4jckhsqyfb/">
