--- a/htmlPro/index.html
+++ b/htmlPro/index.html
@@ -19,6 +19,7 @@
 
     <div id="htmlpart">
         <h1 id="html" class="title"><dfn title="WEB NOTE">WEB NOTE</dfn></h1>
+        <h1 id="html" class="title"><dfn title="WEB NOTE">WEB NOTE</dfn></h1>
     </div>
 
     <div id="editorrecommend">
